# TestTaskFast

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: efb7dc3f0a89_initial_migration.py
app/: database.py  dependencies.py  main.py  models.py
app/api/v1/: auth.py  event.py  fake_parse.py
app/core/: base.py  security.py  settings.py
app/nlp_parser/: __init__.py  bert_model.py  config.py  exceptions.py  language_detector.py  models.py  normalizers.py  parse.py  parser.py
app/repository/event/: event_repo.py  interfaces.py
app/repository/user/: user_repo.py
app/repository/user_repo/: interfaces.py
app/schemas/: events_schemas.py  users_schemas.py
app/services/event/: event_service.py  interfaces.py
app/services/user/: interfaces.py  user_service.py
app/services/user_service/: user_service.py
app/utils/: event_data_order.py  fake_nlp.py  json_format.py  jwt.py  object_create.py  password.py
app/websocket/: broker.py  manager.py
app/websocket/service_socket/: service.py
app/worker/: celery_app.py
